--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
    <button type="button">Home</button> </a>
 <a href="HomeWork.html" target="_blank">
 <button type="button">Homework</button> </a>
-<a href="SemesterProject.html" target="_blank">
-<button type="button">Semester Project</button> </a>
+<a href="FAQ.html" target="_blank">
+<button type="button">FAQ</button> </a>
 
 
 
@@ -47,10 +47,6 @@
  <br> <strong>Research Interests:</strong>
  <br> Cinematic, Gaming Industry and Web applications
  </p> 
-
-
-
-
 
 
 
