--- a/FAQ.html
+++ b/FAQ.html
@@ -9,11 +9,11 @@
 <p style="text-align:center;color:black; font-size:30pt;">Frequently Asked Questions</p> 
 
 
-<br> <p style="text-align:center;color:black; font-size:20pt;"> Renting Items Web Application </p> 
-<br> <p style="text-align:center;color:black; font-size:20pt;"> Team Member Names </p> 
+<br> <p style="text-align:center;color:black; font-size:30pt;"> What are Coronaviruses? </p> 
+<br> <p style="text-align:center;color:black; font-size:20pt;"> Coronaviruses (CoV) are a large family of viruses that cause illness ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS-CoV) and Severe Acute Respiratory Syndrome (SARS-CoV).  </p> 
 
-<br> <p style="text-align:center;color:black; font-size:30pt;">1.Badr Saad Alqarni</p> 
-<br> <p style="text-align:center;color:black; font-size:30pt;">2.Husam Saud Alsoryhi </p> 
+<br> <p style="text-align:center;color:black; font-size:30pt;">What are the species of coronaviruses that have been discovered so far and that humans can be infected with from an animal source?</p> 
+<br> <p style="text-align:center;color:black; font-size:20pt;">The SARS-CoV was transmitted from civet cats to humans in 2002 in China and MERS-CoV from dromedary camels to humans in 2012 in Saudi Arabia. Also, the novel coronavirus (COVID-19) had some link to the seafood and animal market in Wuhan, China. </p> 
 <br>
 <br> <p style="text-align:center;color:black; font-size:30pt;">Abstract</p>
 <br> <p style="text-align:center;color:black; font-size:20pt;"> Problem Definition:
