--- a/FAQ.html
+++ b/FAQ.html
@@ -11,32 +11,25 @@
 
 <br> <p style="text-align:center;color:black; font-size:30pt;"> What are Coronaviruses? </p> 
 <br> <p style="text-align:center;color:black; font-size:20pt;"> Coronaviruses (CoV) are a large family of viruses that cause illness ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS-CoV) and Severe Acute Respiratory Syndrome (SARS-CoV).  </p> 
-
+<br>
 <br> <p style="text-align:center;color:black; font-size:30pt;">What are the species of coronaviruses that have been discovered so far and that humans can be infected with from an animal source?</p> 
 <br> <p style="text-align:center;color:black; font-size:20pt;">The SARS-CoV was transmitted from civet cats to humans in 2002 in China and MERS-CoV from dromedary camels to humans in 2012 in Saudi Arabia. Also, the novel coronavirus (COVID-19) had some link to the seafood and animal market in Wuhan, China. </p> 
 <br>
-<br> <p style="text-align:center;color:black; font-size:30pt;">Abstract</p>
-<br> <p style="text-align:center;color:black; font-size:20pt;"> Problem Definition:
-- Wasting money on items that you use few times in a long period of time (for example: drills, Ladders and Grills). 
+<br> <p style="text-align:center;color:black; font-size:30pt;">What is (COVID-19)?</p>
+<br> <p style="text-align:center;color:black; font-size:20pt;"> It is the new coronavirus and most cases appeared in the Chinese city, Wuhan at the end of December 2019 in the form of acute pneumonia.</p>
+<br> 
+<br> <p style="text-align:center;color:black; font-size:30pt;">How the virus identified?</p>
+<br> <p style="text-align:center;color:black; font-size:20pt;">The virus was identified through genetic sequences.</p>
+<br> 
+<br> <p style="text-align:center;color:black; font-size:30pt;">Can the virus spread from person to person? </p>
+<br> <p style="text-align:center;color:black; font-size:20pt;">Yes, the virus can spread from the infected person to another person through close contact without protection.</p>
+<br> 
+<br> <p style="text-align:center;color:black; font-size:30pt;">I just came from China having high temperature and shortness of breath ... what shall I do? </p>
+<br> <p style="text-align:center;color:black; font-size:20pt;">Visit the nearest health facility, for more information call the 937 Service Center. </p>
+<br> 
+<br> <p style="text-align:center;color:black; font-size:30pt;">Can the COVID-19 spread through shipments coming from China?</p>
+<br> <p style="text-align:center;color:black; font-size:20pt;">According to available information, the goods imported from China pose no risk.</p>
 
-Existing solution:
- - Some shops can rent items and you give it back after you use them. 
-
-Disadvantages of this solution: 
-- Wasting time to go get the item from the shop and asking for a lot of information and If you damaged the time you need to pay it price. 
-
-Our solution:
-- A website that you can lend and borrow items for free or you can donate your items.
-
-Minimum features:
-- Borrower can search for the items they are looking for.
-- Display some information like: the name of owner/borrower, showing the location of the owner and the borrower.
-- Owners can add a picture of the item.
-- The owner can rate the experiment he had with the borrower and other owners can see the rating of that borrower to accept his request to borrow their items.
-
-Optional features:
-- Customize the items into 2 categories: Loaned items and Donated items.
-- Dark/white theme </p>
 
 <br> <strong> Important Refernces </strong>
 
