--- a/index.html
+++ b/index.html
@@ -28,16 +28,11 @@
 <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
  
 
- <br> <strong>Education Background:</strong>
- <br> Student in King Abdulaziz University  
- <br> Major: Information Technology
- <br>
- <br> <strong>Email: </strong>
- <br> balqarni0044@stu.kau.edu.sa
- <br> <strong>Hobby:</strong>
- <br> Editing Videos, Jogging and Reading
- <br> <strong>Research Interests:</strong>
- <br> Cinematic, Gaming Industry and Web applications
+
+
+ <br> <strong>Introduction:</strong>
+ <br> On December 31st, 2019, the WHO Regional Office in China was informed of cases of pneumonia of unknown cause detected in Wuhan City, Hubei Province of China. On January 7th, 2020, the Chinese authorities announced they had identified a new virus that causes these cases.   
+ 
  </p> 
 
 
