--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <a href="index.html" target="_blank">
    <button type="button">Home</button> </a>
-<a href="HomeWork.html" target="_blank">
-<button type="button">Homework</button> </a>
+<a href="videos.html" target="_blank">
+<button type="button">Videos</button> </a>
 <a href="FAQ.html" target="_blank">
 <button type="button">FAQ</button> </a>
 
