--- a/index.html
+++ b/index.html
@@ -32,10 +32,35 @@
 
  <br> <strong>Introduction:</strong>
  <br> On December 31st, 2019, the WHO Regional Office in China was informed of cases of pneumonia of unknown cause detected in Wuhan City, Hubei Province of China. On January 7th, 2020, the Chinese authorities announced they had identified a new virus that causes these cases.   
- 
- </p> 
+ <br> A novel coronavirus (CoV) named ‘2019-nCoV’ or ‘2019 novel coronavirus’ or ‘COVID-19’ by the World Health Organization (WHO) is in charge of the current outbreak of pneumonia that began at the beginning of December 2019 near in Wuhan City, Hubei Province, China [1–4]. COVID-19 is a pathogenic virus. From the phylogenetic analysis carried out with obtainable full genome sequences, bats occur to be the COVID-19 virus reservoir, but the intermediate host(s) has not been detected till now.
+ <br> <strong>A Brief History of the Coronavirus Outbreak</strong>
+ <br> Though three major areas of work already are ongoing in China to advise our awareness of the pathogenic origin of the outbreak. These include early inquiries of cases with symptoms occurring near in Wuhan during December 2019, ecological sampling from the Huanan Wholesale Seafood Market as well as other area markets, and the collection of detailed reports of the point of origin and type of wildlife species marketed on the Huanan market and the destination of those animals after the market has been closed.
+ <br> Coronaviruses mostly cause gastrointestinal and respiratory tract infections and are inherently categorized into four major types: Gammacoronavirus, Deltacoronavirus, Betacoronavirus and Alphacoronavirus. The first two types mainly infect birds, while the last two mostly infect mammals. Six types of human CoVs have been formally recognized. These comprise HCoVHKU1, HCoV-OC43, Middle East Respiratory Syndrome coronavirus (MERS-CoV), Severe Acute Respiratory Syndrome coronavirus (SARS-CoV) which is the type of the Betacoronavirus, HCoV229E and HCoV-NL63, which are the member of the Alphacoronavirus. Coronaviruses did not draw global concern until the 2003 SARS pandemic, preceded by the 2012 MERS and most recently by the COVID-19 outbreaks. SARS-CoV and MERS-CoV are known to be extremely pathogenic and spread from bats to palm civets or dromedary camels and eventually to humans.
+ <br> COVID-19 is spread by dust particles and fomites while close unsafe touch between the infector and the infected individual. Airborne distribution has not been recorded for COVID-19 and is not known to be a significant transmission engine based on empirical evidence; although it can be imagined if such aerosol-generating practices are carried out in medical facilities. Faecal spreading has been seen in certain patients, and the active virus has been reported in a small number of clinical studies. Furthermore, the faecal-oral route does not seem to be a COVID-19 transmission engine; its function and relevance for COVID-19 need to be identified.
+ <br> For about 18,738,58 laboratory-confirmed cases recorded as of 2nd week of April 2020, the maximum number of cases (77.8%) was between 30 and 69 years of age. Among the recorded cases, 21.6% are farmers or employees by profession, 51.1% are male and 77.0% are Hubei. 
+ <br> <strong>How to prevent covid-19 ?</strong>
+ <br> If COVID-19 is spreading in your community, stay safe by taking some simple precautions, such as physical distancing, wearing a mask, keeping rooms well ventilated, avoiding crowds, cleaning your hands, and coughing into a bent elbow or tissue. Check local advice where you live and work. Do it all!
+
+Make wearing a mask a normal part of being around other people.
+
+Masks should be used as part of a comprehensive strategy of measures to suppress transmission and save lives; the use of a mask alone is not sufficient to provide an adequate level of protection against COVID-19
+
+Clean your hands before you put your mask on, as well as before and after you take it off.
+Make sure it covers both your nose, mouth and chin. 
+Here are some specifics on what type of mask to wear and when, depending on how much virus is circulating where you live, where you go and who you are.
+
+Wear a fabric mask unless you’re in a particular risk group. This is especially important when you can’t stay physically distanced, particularly in crowded and poorly ventilated indoor settings.
+Wear a medical/surgical mask if you:
+Are over 60,
+Have underlying medical conditions
+Are feeling unwell, and/or
+Are looking after an ill family member.
+For more public advice on masks, read our Q&A and watch our videos.
+
+For health workers, medical masks are essential personal protective equipment when engaging with patients with suspected, probable or confirmed COVID-19. Respirator masks (such as FFP2, FFP3, N95, N99) should be used in settings where procedures generating aerosols are performed and must be fitted to ensure the right size is worn.
 
 
+</p> 
 
  </body>
 </html>
