--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <img src="https://d2v9ipibika81v.cloudfront.net/uploads/sites/60/covid-19.png" alt="Covid" width="2550" height="600";>
    <body style="background-color:gray;">
-<p style = "color:white; font-size:36pt;">Welcome to my web page. 
- <br> <p style = "color:white; font-size:30pt;">Badr Alqarni </p>
+
+ <br> <p style = "color:white; font-size:30pt;"> COVID-19 </p>
 
 <br>
 
