--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="https://d2v9ipibika81v.cloudfront.net/uploads/sites/60/covid-19.png" alt="Covid" width="2550" height="600";>
    <body style="background-color:gray;">
 
- <br> <p style = "color:white; font-size:30pt;"> COVID-19 </p>
+
 
 <br>
 
@@ -24,7 +24,7 @@
 <br>
 
 
-<p style="text-align:center;color:black; font-size:30pt;">Badr's CPIT-405 Home Page</p> 
+<p style="text-align:center;color:black; font-size:30pt;">COVID-19</p> 
 <p style="border:3px; border-style:solid; border-color:#FF0000;font-size:30pt; padding: 1em;">
  
 
