--- a/videos.html
+++ b/videos.html
@@ -1,3 +1,14 @@
+<html>
+<head>
+<meta charset = "utf-8">
+<title>Videos</title>
+   </head>
+ <body> 
+
+<body style="background-color:gray;">
+<p style="text-align:center;color:black; font-size:40pt;">Frequently Asked Questions</p> 
+
+
 <h1>Videos about COVID-19: </h1>
 
 <br>
@@ -13,3 +24,12 @@
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=CroxNId79Dw&ab_channel=%D9%88%D8%B2%D8%A7%D8%B1%D8%A9%D8%A7%D9%84%D8%B5%D8%AD%D8%A9%D8%A7%D9%84%D8%B3%D8%B9%D9%88%D8%AF%D9%8A%D8%A9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br> 
+
+<br>
+<a href="index.html" target="_blank">
+<img src="https://www.iconfinder.com/data/icons/construction-166/32/construction-01-128.png" alt="Simply Easy Learning" width="110" height="110";>
+<br>
+   <h1> Go back to homepage </h1> </a>
+
+ </body>
+</html>
