--- a/videos.html
+++ b/videos.html
@@ -14,7 +14,7 @@
 <br>
 1#: Recognizing Day to Day Signs and Symptoms of Coronavirus:
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=U8r3oTVMtQ0&t=26s&ab_channel=FreeMedEducation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U8r3oTVMtQ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 2#: The Coronavirus Explained & What You Should Do
 <br>
