--- a/videos.html
+++ b/videos.html
@@ -18,11 +18,11 @@
 <br>
 2#: The Coronavirus Explained & What You Should Do
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=BtN-goy9VOY&t=2s&ab_channel=Kurzgesagt%E2%80%93InaNutshell" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BtN-goy9VOY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br> 
 3#: كورونا الجديد
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=CroxNId79Dw&ab_channel=%D9%88%D8%B2%D8%A7%D8%B1%D8%A9%D8%A7%D9%84%D8%B5%D8%AD%D8%A9%D8%A7%D9%84%D8%B3%D8%B9%D9%88%D8%AF%D9%8A%D8%A9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CroxNId79Dw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br> 
 
 <br>
