--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <button type="button">Videos</button> </a>
 <a href="FAQ.html" target="_blank">
 <button type="button">FAQ</button> </a>
-
+<a href="cases.html" target="_blank">
+<button type="button">Cases</button> </a>
 
 
 <br>
