--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <img src="https://d2v9ipibika81v.cloudfront.net/uploads/sites/60/covid-19.png" alt="Covid" width="2550" height="600";>
    <body style="background-color:gray;">
 
-
-
+Symptoms
+Syndromes
 <br>
 
 <a href="index.html" target="_blank">
@@ -18,6 +18,8 @@
 <button type="button">Videos</button> </a>
 <a href="cases.html" target="_blank">
 <button type="button">Cases</button> </a>
+<a href="Syndromes.html" target="_blank">
+<button type="button">Syndromes</button> </a>
 <a href="FAQ.html" target="_blank">
 <button type="button">FAQ</button> </a>
 
