--- a/Syndromes.html
+++ b/Syndromes.html
@@ -10,52 +10,52 @@
 <p style="text-align:center;color:black; font-size:30pt;">Cases</p> 
 
 <h2>
-
+<br><br>
 Signs and symptoms of coronavirus disease 2019 (COVID-19) may appear two to 14 days after exposure. This time after exposure and before having symptoms is called the incubation period. Common signs and symptoms can include:
-
-- Fever
-- Cough
-- Tiredness
-- Early symptoms of COVID-19 may include a loss of taste or smell.
-
-Other symptoms can include:
-
-- Shortness of breath or difficulty breathing
-- Muscle aches
-- Chills
-- Sore throat
-- Runny nose
-- Headache
-- Chest pain
-- Pink eye (conjunctivitis)
-This list is not all inclusive. Other less common symptoms have been reported, such as rash, nausea, vomiting and diarrhea. Children have similar symptoms to adults and generally have mild illness.
-
-The severity of COVID-19 symptoms can range from very mild to severe. Some people may have only a few symptoms, and some people may have no symptoms at all. Some people may experience worsened symptoms, such as worsened shortness of breath and pneumonia, about a week after symptoms start.
-
-People who are older have a higher risk of serious illness from COVID-19, and the risk increases with age. People who have existing chronic medical conditions also may have a higher risk of serious illness. Certain medical conditions that increase the risk of serious illness from COVID-19 include:
-
-Serious heart diseases, such as heart failure, coronary artery disease or cardiomyopathy
-- Cancer
-- Chronic obstructive pulmonary disease (COPD)
-Type 2 diabetes
-- Obesity or severe obesity
-- Smoking
-- Chronic kidney disease
-- Sickle cell disease
-- Weakened immune system from solid organ transplants
-- Pregnancy
-Other conditions may increase the risk of serious illness, such as:
-
-- Asthma
-- Liver disease
-- Overweight
-- Chronic lung diseases such as cystic fibrosis or pulmonary fibrosis
-- Brain and nervous system conditions
-- Weakened immune system from bone marrow transplant, HIV or some medications
-- Type 1 diabetes
-- High blood pressure
-This list is not all inclusive. Other underlying medical conditions may increase your risk of serious illness from COVID-19.
-
+<br><br>
+- Fever <br><br>
+- Cough <br><br>
+- Tiredness <br><br>
+- Early symptoms of COVID-19 may include a loss of taste or smell. <br><br>
+<br><br>
+Other symptoms can include: <br><br>
+<br><br>
+- Shortness of breath or difficulty breathing <br><br>
+- Muscle aches <br><br>
+- Chills <br><br>
+- Sore throat <br><br>
+- Runny nose <br><br>
+- Headache <br><br>
+- Chest pain <br><br>
+- Pink eye (conjunctivitis) <br><br>
+This list is not all inclusive. Other less common symptoms have been reported, such as rash, nausea, vomiting and diarrhea. Children have similar symptoms to adults and generally have mild illness. <br><br>
+<br><br>
+The severity of COVID-19 symptoms can range from very mild to severe. Some people may have only a few symptoms, and some people may have no symptoms at all. Some people may experience worsened symptoms, such as worsened shortness of breath and pneumonia, about a week after symptoms start. <br><br>
+<br><br>
+People who are older have a higher risk of serious illness from COVID-19, and the risk increases with age. People who have existing chronic medical conditions also may have a higher risk of serious illness. Certain medical conditions that increase the risk of serious illness from COVID-19 include: <br><br>
+<br><br>
+Serious heart diseases, such as heart failure, coronary artery disease or cardiomyopathy <br><br>
+- Cancer <br><br>
+- Chronic obstructive pulmonary disease (COPD) <br><br>
+Type 2 diabetes <br><br>
+- Obesity or severe obesity <br><br>
+- Smoking <br><br>
+- Chronic kidney disease <br><br>
+- Sickle cell disease <br><br>
+- Weakened immune system from solid organ transplants <br><br>
+- Pregnancy <br><br>
+Other conditions may increase the risk of serious illness, such as: <br><br>
+<br><br>
+- Asthma <br><br>
+- Liver disease <br><br>
+- Overweight <br><br>
+- Chronic lung diseases such as cystic fibrosis or pulmonary fibrosis <br><br>
+- Brain and nervous system conditions <br><br>
+- Weakened immune system from bone marrow transplant, HIV or some medications <br><br>
+- Type 1 diabetes <br><br>
+- High blood pressure <br><br>
+This list is not all inclusive. Other underlying medical conditions may increase your risk of serious illness from COVID-19. <br><br>
+<br><br>
 
 </h2>
 <br>
