--- a/Syndromes.html
+++ b/Syndromes.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset = "utf-8">
-<title>HomeWork#1</title>
+<title>Syndromes</title>
    </head>
  <body> 
 <img src="https://www.jhah.com/media/3317/covid19-key-facts-banner-en.jpg?anchor=center&mode=crop&rnd=132390126850000000&mode=none&quality=80" alt="COVID-19" width="2550" height="600";>
