--- a/Syndromes.html
+++ b/Syndromes.html
@@ -7,7 +7,7 @@
 <img src="https://www.jhah.com/media/3317/covid19-key-facts-banner-en.jpg?anchor=center&mode=crop&rnd=132390126850000000&mode=none&quality=80" alt="COVID-19" width="2550" height="600";>
 
 <body style="background-color:gray;">
-<p style="text-align:center;color:black; font-size:30pt;">Cases</p> 
+<p style="text-align:center;color:black; font-size:30pt;">Syndromes</p> 
 
 <h2>
 <br><br>
